# NanoTekSpice

./: .gitignore  CMakeLists.txt  Main.cpp  Makefile  build.sh  myBuild.sh
.github/workflows/: pain_au_chocolat.yml
include/: AComponent.hpp  AFourGates.hpp  AInput.hpp  ASingle.hpp  Circuit.hpp  Component4001.hpp  Component4011.hpp  Component4030.hpp  Component4071.hpp  Component4081.hpp  ComponentAnd.hpp  ComponentClock.hpp  ComponentFalse.hpp  ComponentInput.hpp  ComponentNand.hpp  ComponentOr.hpp  ComponentOutput.hpp  ComponentTrue.hpp  ComponentXor.hpp  IComponent.hpp  Parsing.hpp
include/Abstract/: AComponent.hpp  AInput.hpp  ASingle.hpp
include/Component/FourGates/: Component4001.hpp  Component4011.hpp  Component4030.hpp  Component4071.hpp  Component4081.hpp
include/Component/Input/: ComponentClock.hpp  ComponentFalse.hpp  ComponentInput.hpp  ComponentTrue.hpp
include/Component/Other/: Circuit.hpp  Component4069.hpp  ComponentNot.hpp  ComponentOutput.hpp
include/Component/Single/: ComponentNor.hpp
include/Factory/: ComponentFactory.hpp
include/Interface/: IComponent.hpp
include/Parsing/: Parsing.hpp
include/Run/: Run.hpp
src/: AComponent.cpp  AFourGates.cpp  AInput.cpp  ASingle.cpp  CMakeLists.txt  Circuit.cpp
src/Abstract/: AComponent.cpp  AFourGates.cpp  AInput.cpp  ASingle.cpp
src/Abstracts/: AComponent.cpp  AFourGates.cpp  AInput.cpp  ASingle.cpp  ComponentTrue.cpp
src/Component/: Component4001.cpp  Component4011.cpp  Component4030.cpp  Component4071.cpp  Component4081.cpp  ComponentAnd.cpp  ComponentClock.cpp  ComponentFalse.cpp  ComponentInput.cpp  ComponentNand.cpp  ComponentNor.cpp  ComponentNot.cpp  ComponentOr.cpp  ComponentOutput.cpp  ComponentXor.cpp
src/Component/Advanced/4008/: Component4008.cpp  ComponentCo.cpp  ComponentSum.cpp  ComponentSum_l.cpp
src/Component/Advanced/4017/: Component4017.cpp
src/Component/Advanced/4040/: Component4040.cpp
src/Component/FourGates/: Component4011.cpp  Component4030.cpp  Component4071.cpp  Component4081.cpp
src/Component/Input/: ComponentClock.cpp  ComponentFalse.cpp  ComponentInput.cpp  ComponentTrue.cpp
src/Component/Other/: Circuit.cpp  Component4069.cpp  ComponentOutput.cpp
src/Component/Single/: ComponentAnd.cpp  ComponentNand.cpp  ComponentXor.cpp
src/Factory/: ComponentFactory.cpp
src/Parsing/: Parse.cpp  Parsing.cpp  parseFile.cpp
src/Run/: Run.cpp
tests/: CMakeLists.txt  TestsComponent4001.cpp  TestsComponent4011.cpp  TestsComponent4030.cpp  TestsComponent4069.cpp  TestsComponent4071.cpp  TestsComponent4081.cpp  TestsComponentAnd.cpp  TestsComponentCircuit.cpp  TestsComponentClock.cpp  TestsComponentFalse.cpp  TestsComponentInput.cpp  TestsComponentNand.cpp  TestsComponentNor.cpp  TestsComponentNot.cpp  TestsComponentOr.cpp  TestsComponentOutput.cpp  TestsComponentTrue.cpp  TestsComponentXor.cpp  TestsParsing.cpp
tests/Component/Advanced/: TestsComponentSum.cpp
tests/Component/FourGates/: TestsComponent4001.cpp  TestsComponent4011.cpp  TestsComponent4030.cpp  TestsComponent4071.cpp  TestsComponent4081.cpp
tests/Component/Input/: TestsComponentClock.cpp  TestsComponentFalse.cpp  TestsComponentInput.cpp  TestsComponentTrue.cpp
tests/Exemple/nts_single/: nothing.nts  (+4 more)
tests/Factory/: TestsComponentFactory.cpp
tests/Parsing/: TestsParsing.cpp
(+16 files in other folders)
